--- a/frontend/src/app/core/card-real-time/card-real-time.component.html
+++ b/frontend/src/app/core/card-real-time/card-real-time.component.html
@@ -17,7 +17,7 @@
 
         <h2 *ngSwitchCase="'temperature'" class="text-2xl font-bold">{{ temperature }} °C</h2>
 
-        <h2 *ngSwitchCase="'horaActual'" class="text-2xl font-bold">{{ currenTime }}</h2>
+        <h2 *ngSwitchCase="'horaActual'" class="text-2xl font-bold">{{ horaActual | date: 'mediumTime' }}</h2>
 
         <h2 *ngSwitchCase="'energy'" class="text-2xl font-bold">{{consumo}} kWh</h2>
 
