--- a/frontend/src/app/core/card-real-time/card-real-time.component.html
+++ b/frontend/src/app/core/card-real-time/card-real-time.component.html
@@ -21,7 +21,7 @@
 
         <h2 *ngSwitchCase="'energy'" class="text-2xl font-bold">{{consumo}} kWh</h2>
 
-        <h2 *ngSwitchDefault class="text-2xl font-bold">No hay datos disponibles</h2>
+        <h2 *ngSwitchDefault class="text-2xl font-bold">Cargando...</h2>
       </div>
 
     </h2>
