--- a/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
+++ b/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
@@ -22,8 +22,7 @@
           </button>
         </div>
       </div>
-
-      {{totalCO2 | json}}
+      {{emissionsCO2 | json}}
     </div>
     
 
@@ -33,7 +32,7 @@
           <app-card-info
           [iconClasses]="'fa-solid fa-tree'"
           [titleCard]="'Arboles'"
-          [dataCardProgress]="'5 unidades'"
+          [dataCardProgress]="'{{KwhToTreeCO2Absorption}}'"
           [subtitleCard]="'Cantidad a plantar'"
           [valueProgress]="10"
           [maxProgress]="100"
