--- a/frontend/src/app/core/toolbar/toolbar.component.html
+++ b/frontend/src/app/core/toolbar/toolbar.component.html
@@ -50,7 +50,7 @@
             <span class="text-3xl">A</span>
           </div>
         </div>
-        <span>Alejandro</span>
+        <span>{{ (user$ | async)?.username || 'Usuario'  }}</span>
         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/>
         </svg>
