--- a/frontend/src/app/core/card/card-info.component.html
+++ b/frontend/src/app/core/card/card-info.component.html
@@ -15,12 +15,19 @@
       <i class="fa-lg fa-solid fa-circle-info text-primary"></i>
     </div>
   </div>
-  <!-- Información principal y progreso -->
+  <!-- Información principal y progreso Actual-->
   <div class="mt-2">
+    <h2 class="text-xs text-gray-500">Mes actual</h2>
     <h2 class="text-2xl font-bold">{{ dataCardProgress }} {{unit}}</h2>
     <div *ngIf="showProgress" class="flex items-center justify-between mt-1">
       <progress [ngClass]="colorProgress" value="{{ valueProgress }}" max="{{ maxProgress }}" class="progress-bar"></progress>
       <span class="text-xs ml-2" [ngClass]="percentageClass">{{ valueProgress }}%</span>
     </div>
+  </div>
+  <div class="divider"></div>
+  <!-- Información principal y progreso Mes anterior-->
+  <div class="mt-2" *ngIf="showMonthPrevious">
+    <h2 class="text-xs text-gray-500">Mes anterior</h2>
+    <h2 class="text-2xl font-bold">{{ dataCardProgressPrevious }} {{unit}}</h2>
   </div>
 </div>
